# icale

./: .gitignore  Cargo.toml  README.md
client/wasm-rs/: Cargo.toml  LICENSE_MIT
client/wasm-rs/src/: lib.rs
docs/: roadmap.md  technicalrequirement.md  usecase.md
icale-core/: Cargo.toml
icale-core/src/: lib.rs
icale-core/src/core/: mod.rs
icale-core/src/core/glue/: convert.rs  mod.rs
icale-core/src/service/character/: mod.rs
icale-core/src/service/character/adapter/repository/: glue.rs
icale-core/src/service/character/domain/: mod.rs
icale-core/src/service/character/port/: repository.rs
icale-core/src/service/character/port/repository/: glue.rs  mod.rs
