[package]
name = "icale-core"
version = "0.1.0"
authors = ["euiko"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.51"
async-trait = "0.1.50"
config = "0.11"
gluesql = "0.6"

[dependencies.chrono]
version = "0.4"
features = ["wasmbind"]
